##############################################################################
# Spectral Python (SPy) package change log
##############################################################################

2013-02-17	tboggs <tboggs@users.sourceforge.net>

    Search `SPECTRAL_DATA` paths for `AsterDatabase` files.

    * database/aster.py (AsterDatabase.__init__).

2013-02-13	tboggs <tboggs@users.sourceforge.net>

    Fix covariance averaging for MahalanobisDistanceClassifier.

    * algorithms/classifiers.py (MahalanobisDistanceClassifier.train):
      Divide by total number of samples when computing weighted covariance.

    Finished Perceptron Classifier improvements.

    * algorithms/classifiers.py (PerceptronClassifier.train): Return
      Perceptron.train result.
    * algorithms/perceptron.py (PerceptronLayer.randomize_weights):
      Randomize weights so initial hyperplanes intersect the unit box [0, 0].
    * test/classifiers.py: Added perceptron unit tests.

2013-02-11	tboggs <tboggs@users.sourceforge.net>

    Fixed PerceptronClassifier implementation.

    * algorithims/__init__.py: import all from classifiers.py.
    * algorithms/classifiers.py: Moved PerceptronClassifier from perceptron.py.
    * algorithms/perceptron.py: Numerous fixes/improvements. This file is now
      independent of the rest of the SPy package (i.e., it is a pure
      multilayer perceptron implementation without the baggage of the rest of
      the SPy package).

2013-01-05	tboggs <tboggs@users.sourceforge.net>

    Enable displaying `imshow` output in an existing matplotlib figure.

    * graphics/spypylab (imshow): Accept optional `fignum` argument.

2013-01-05	tboggs <tboggs@users.sourceforge.net>

    Updated version to 0.13

    Allow modifying `ImageView` classes even when the `classes` arg was not
    provided.

    * graphics/spypylab.py:
      (ImageViewKeyboardHandler.handle_event): Check ImageView.classes instead
        of ImageView.class_axes.